--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "next": "12.0.10",
+    "next": "^13.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "uniqid": "^5.4.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "8.8.0",
